created 3 responsive columns

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</header><!--/.main-header-->   
 
 	<div class="banner">
-		<img class="logo" src="img/city-logo.svg" alt="City">
+		<img class="logo" src="img/city-logo.png" alt="City">
 		<h1 class="headline">The Best City</h1>
 		<span class="tagline">The best drinks and eats in the best city ever.</span>
 	</div><!--/.banner-->
